--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
 <!-- 主要内容 开始 -->
 <div class="swiper-container pc">
   <div class="swiper-wrapper">
-    <div class="swiper-slide"> <img src="images/5d2338f34fa1a.png" alt="" class="img-responsive" height="800"> </div>
+    <div class="swiper-slide"> <img src="images/5d2338f34fa1a.png" alt="" class="avatar p-1 flex-shrink-0" height="800"> </div>
   </div>
   <div class="swiper-pagination"></div>
 </div>
 <div class="swiper-container web">
   <div class="swiper-wrapper">
-    <div class="swiper-slide"> <img src="images/5d2338f7947fd.png" alt="" class="img-responsive"> </div>
+    <div class="swiper-slide"> <img src="images/5d2338f7947fd.png" alt="" class="iavatar p-1 flex-shrink-0"> </div>
   </div>
   <div class="swiper-pagination"></div>
 </div>
 <div class="container">
-  <div class="about"> <img class="about-img" src="images/about.png">
+  <div class="about"> <img class="avatar p-1 flex-shrink-0" src="images/about.png">
     <div class="about-desc">
       <h3 class="desc-title">经营范围</h3>
       <p class="desc-p2"> 一般项目：技术服务、技术开发、技术咨询、技术交流、技术转让、技术推广；软件开发；
@@ -114,7 +114,7 @@
     </div>
     <div class="right">
       <p class="wx">官方微信</p>
-      <img src="images/ma.png" alt="微信二维码"> </div>
+      <img src="images/ma.png" alt="微信二维码" class="avatar p-1 flex-shrink-0"> </div>
   </div>
 </footer>
 <style>
